--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -53,3 +53,4 @@ $media-tablet: "only screen and (max-width : 768px)";
 $media-mobile: "only screen and (max-width : 600px)";
 $media-mobile-sm: "only screen and (max-width : 414px)";
 $media-mobile-xsm: "only screen and (max-width : 395px)";
+$media-mobile-xxsm: "only screen and (max-width : 371px)";
